Fixed pill switch label truncation.

--- a/src/scss/quadrone/components/pills.scss
+++ b/src/scss/quadrone/components/pills.scss
@@ -123,6 +123,7 @@
 
   .icon-and-label-container {
     min-width: 0;
+    flex: 1;
   }
 
   .pill-switch-icon-container {
